--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,6 +17,11 @@ jobs:
       - run:
           name: "Say hello"
           command: "echo Hello, World!"
+  say-hello-again:
+    steps:
+      - run:
+        name: "Hello again!"
+        command: "echo Hello world again!"
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
@@ -24,3 +29,4 @@ workflows:
   say-hello-workflow:
     jobs:
       - say-hello
+      - say-hello-again
